--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           node-version: 12
       - run: npm ci
-      - run: npm test
+      - run: npm test -- --watchAll=false
       - run: npm run build
       - uses: maxheld83/ghpages@v0.2.1
         env:
