--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.1.1",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^10.0.0",
+    "formik": "^2.1.4",
     "govuk-react-jsx": "^1.4.0",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
