--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^10.0.0",
     "formik": "^2.1.4",
-    "govuk-react-jsx": "^1.4.0",
+    "govuk-react-jsx": "^1.4.1",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-helmet": "^5.2.1",
     "react-hook-form": "^4.9.6",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
