--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "@testing-library/user-event": "^10.0.1",
     "formik": "^2.1.4",
     "govuk-react-jsx": "^2.0.1",
-    "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
     "react-hook-form": "^5.3.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "sass": "^1.26.3",
     "yup": "^0.28.3"
   },
   "devDependencies": {
