--- a/package.json
+++ b/package.json
@@ -4,32 +4,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.5.0",
-    "@testing-library/react": "^10.0.3",
-    "@testing-library/user-event": "^10.0.2",
+    "@testing-library/jest-dom": "^5.9.0",
+    "@testing-library/react": "^10.0.4",
+    "@testing-library/user-event": "^10.4.0",
     "formik": "^2.1.4",
-    "govuk-react-jsx": "^2.0.1",
+    "govuk-frontend": "^3.6.0",
+    "govuk-react-jsx": "^3.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
-    "react-hook-form": "^5.5.1",
-    "react-router-dom": "^5.1.2",
+    "react-hook-form": "^5.7.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "sass": "^1.26.3",
-    "yup": "^0.28.4"
+    "sass": "^1.26.7",
+    "yup": "^0.29.1"
   },
   "devDependencies": {
     "eslint-config-airbnb": "^18.1.0",
-    "eslint-config-prettier": "^6.10.1",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-config-wesbos": "0.0.19",
     "eslint-plugin-html": "^6.0.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-react-hooks": "^3.0.0",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint": "^6.8.0",
-    "prettier": "^2.0.4"
+    "eslint-plugin-react-hooks": "^4.0.4",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint": "^7.1.0",
+    "prettier": "^2.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
