Update to govuk-react-jsx@4.0.0 and govuk-frontend@3.8.0

--- a/package.json
+++ b/package.json
@@ -4,32 +4,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.9.0",
-    "@testing-library/react": "^10.0.5",
-    "@testing-library/user-event": "^10.4.1",
-    "formik": "^2.1.4",
-    "govuk-frontend": "^3.7.0",
-    "govuk-react-jsx": "^3.1.0",
+    "@testing-library/jest-dom": "^5.11.2",
+    "@testing-library/react": "^10.4.7",
+    "@testing-library/user-event": "^12.0.17",
+    "formik": "^2.1.5",
+    "govuk-frontend": "^3.8.0",
+    "govuk-react-jsx": "^4.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-helmet": "^6.0.0",
-    "react-hook-form": "^5.7.2",
+    "react-helmet": "^6.1.0",
+    "react-hook-form": "^6.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "sass": "^1.26.7",
-    "yup": "^0.29.1"
+    "sass": "^1.26.10",
+    "yup": "^0.29.2"
   },
   "devDependencies": {
-    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-wesbos": "0.0.19",
     "eslint-plugin-html": "^6.0.2",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-react-hooks": "^4.0.4",
-    "eslint-plugin-react": "^7.20.0",
-    "eslint": "^7.1.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react-hooks": "^4.0.8",
+    "eslint-plugin-react": "^7.20.5",
+    "eslint": "7.2.0",
     "prettier": "^2.0.5"
   },
   "scripts": {
