--- a/package.json
+++ b/package.json
@@ -4,33 +4,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.2",
-    "@testing-library/react": "^10.4.7",
-    "@testing-library/user-event": "^12.0.17",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^10.4.9",
+    "@testing-library/user-event": "^12.1.3",
     "formik": "^2.1.5",
-    "govuk-frontend": "^3.8.0",
-    "govuk-react-jsx": "^4.0.2",
+    "govuk-frontend": "^3.8.1",
+    "govuk-react-jsx": "4.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
-    "react-hook-form": "^6.2.0",
+    "react-hook-form": "^6.7.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "3.4.3",
     "sass": "^1.26.10",
-    "yup": "^0.29.2"
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-config-wesbos": "0.0.19",
-    "eslint-plugin-html": "^6.0.2",
+    "eslint-config-wesbos": "0.0.22",
+    "eslint-plugin-html": "^6.0.3",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react-hooks": "^4.0.8",
-    "eslint-plugin-react": "^7.20.5",
-    "eslint": "7.2.0",
-    "prettier": "^2.0.5"
+    "eslint-plugin-react-hooks": "^4.1.0",
+    "eslint-plugin-react": "^7.20.6",
+    "eslint": "7.8.1",
+    "prettier": "^2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
