--- a/package.json
+++ b/package.json
@@ -4,33 +4,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^10.4.9",
-    "@testing-library/user-event": "^12.1.3",
-    "formik": "^2.1.5",
-    "govuk-frontend": "^3.8.1",
-    "govuk-react-jsx": "4.0.3",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
+    "@testing-library/user-event": "^12.6.0",
+    "formik": "^2.2.6",
+    "govuk-frontend": "3.10.0",
+    "govuk-react-jsx": "4.1.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "react-hook-form": "^6.7.0",
+    "react-hook-form": "^6.13.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
-    "sass": "^1.26.10",
-    "yup": "^0.29.3"
+    "react-scripts": "4.0.1",
+    "sass": "^1.30.0",
+    "yup": "^0.32.8"
   },
   "devDependencies": {
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-config-wesbos": "0.0.22",
-    "eslint-plugin-html": "^6.0.3",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react-hooks": "^4.1.0",
-    "eslint-plugin-react": "^7.20.6",
-    "eslint": "7.8.1",
-    "prettier": "^2.1.1"
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^7.0.0",
+    "eslint-config-wesbos": "1.0.1",
+    "eslint-plugin-html": "^6.1.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.3.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint": "7.15.0",
+    "prettier": "^2.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
