--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
     "formik": "^2.2.6",
-    "govuk-frontend": "3.11.0",
-    "govuk-react-jsx": "5.1.0",
+    "govuk-frontend": "^3.12.0",
+    "govuk-react-jsx": "^6.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
